import "google/protobuf/empty.proto";

syntax = "proto3";

package reporter;

service Reporter {
    rpc sendData(sendDataRequest) returns (google.protobuf.Empty);
}

message sendDataRequest {
    message Result {
        string status = 1;
        string src_ip = 2;
        string src_port = 3;
        string dst_ip = 4;
        string dst_port = 5;
        string protocol = 6;
        string sg_from = 7;
        string sg_to = 8;
        string msgErr = 9;
    };
    int64 duration = 1;
    string node = 2;
    repeated Result results = 3;
}